# term-work-tetrisvs

./: .gitignore  CMakeLists.txt  LICENSE  README.md  logo.txt  tetrisvs.cpp  tetrisvs.h
lib/: CMakeLists.txt  curspriv.h  panel.h
lib/common/: acs437.h  acsgr.h  acsuni.h  font437.h  iconbmp.h
lib/pdcurses/: CMakeLists.txt  addch.c  addchstr.c  addstr.c  attr.c  beep.c  bkgd.c  border.c  clear.c  color.c  debug.c  delch.c  deleteln.c  getch.c  getstr.c  getyx.c  inch.c  inchstr.c  initscr.c  inopts.c  insch.c  insstr.c  instr.c  kernel.c  keyname.c  mouse.c  move.c  outopts.c  overlay.c  pad.c  panel.c  printw.c  refresh.c  scanw.c  scr_dump.c  scroll.c  slk.c  termattr.c  touch.c  util.c  (+1 more)
lib/tge/: gameengine.h
lib/tge/input/: Win32Input.h  abstractinput.h
lib/tge/terminal/: CMDTerminal.h  abstractterminal.h  color.h
lib/wincon/: CMakeLists.txt  pdcclip.c  pdcdisp.c  pdcgetsc.c  pdckbd.c  pdcscrn.c  pdcsetsc.c  pdcutil.c  pdcwin.h
src/: abstractview.h  board.cpp  board.h  color.h  game.cpp  game.h  gametime.cpp  gametime.h  keyboard.cpp  keyboard.h  random.h  shape.cpp  shape.h  shapefactory.cpp  shapefactory.h  symbols.h
src/controllers/: LController.cpp  LController.h  abstractcontroller.cpp  abstractcontroller.h  computercontroller.cpp  computercontroller.h  controller.h  controlscheme.h  lcontroller.cpp  lcontroller.h  playercontroller.cpp  playercontroller.h  rcontroller.cpp  rcontroller.h
src/data/: menu_options
src/data/logo/: bot
src/data/schemes/: 1  2
src/logo/: top
src/managers/: abstractmanager.cpp  abstractmanager.h  gamemanager.cpp  gamemanager.h  menumanager.cpp  menumanager.h
src/model/: board.cpp  board.h  controllerpair.h  game.cpp  game.h  menudata.cpp  menudata.h  shape.cpp  shape.h
src/model/scoring/: abstractscoring.h  neuralscoring.cpp  neuralscoring.h
src/views/: abstractview.h  controls.cpp  controls.h  controlsview.cpp  controlsview.h  endgame.cpp  endgame.h  game.cpp  game.h  gameview.cpp  gameview.h  menu.cpp  menu.h  scoreview.cpp  scoreview.h
