if (WIN32)
    project(ncurses)
    cmake_minimum_required(VERSION 2.8.9)
    set(CMAKE_CXX_STANDARD 17)
    include_directories(lib)
    include_directories(../)
    add_subdirectory(wincon)
    add_subdirectory(pdcurses)
    add_library(curses STATIC wincon/pdcclip.c wincon/pdcdisp.c wincon/pdcgetsc.c wincon/pdckbd.c wincon/pdcscrn.c wincon/pdcsetsc.c wincon/pdcutil.c wincon/pdcwin.h)
    target_link_libraries(curses pdcurses)
    target_link_libraries(curses wincon)
endif (WIN32)
